--- a/src/stylesheets/Main.scss
+++ b/src/stylesheets/Main.scss
@@ -52,13 +52,21 @@ a {
 
 section {
   margin: 1rem auto;
-  margin-top: 0;
+  margin-top: 5rem;
   max-width: min(700px, 90vw);
-  margin-bottom: 2rem;
+  // margin-bottom: 5rem;
   h2 {
     margin-top: 2rem;
     border-bottom: solid 1px rgba(255, 255, 255, 0.377);
   }
+}
+
+section:first-of-type {
+  margin-top: 5rem;
+}
+
+section:last-of-type {
+  margin-bottom: 4rem;
 }
 
 .code-block {
