--- a/src/stylesheets/Projects.scss
+++ b/src/stylesheets/Projects.scss
@@ -144,6 +144,7 @@
 .projects-grid {
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1.5rem;
+  margin-top: 2rem;
 }
 
 .project:first-of-type {
