Global smooth scroll

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
   * {
     font-family: "Raleway", sans-serif;
   }
+  html {
+    scroll-behavior: smooth;
+  }
   body {
     color: white;
     background: rgb(28, 28, 31);
